grid similiar additional line/whitespace fix

--- a/jap_vocabulary/jap_vocabulary_styles - Copy.css
+++ b/jap_vocabulary/jap_vocabulary_styles - Copy.css
@@ -20,13 +20,9 @@ body {
 }
 
 .similiar_looking_basic_row {
-  background: linear-gradient(
-    90deg,
-    rgb(245, 245, 245, 0),
-    rgb(245, 245, 245, 1) 15%,
-    rgb(245, 245, 245, 1) 75%,
-    rgb(245, 245, 245, 0)
-  );
+  background-color: rgb(245, 245, 245, 0.3);
+  */
+  border-radius: 1px;
   width: 100vw;
   /* border: 4px solid red; */
   display: grid;
@@ -35,7 +31,9 @@ body {
   grid-template-columns: 2fr 1fr 1fr 2fr;
   grid-template-areas:
     "translation_left hiragana_left hiragana_right translation_right"
-    "translation_left kanji_left kanji_right translation_right";
+    "translation_left kanji_left kanji_right translation_right"
+    "translation_left2 hiragana_left2 hiragana_right2 translation_right2"
+    "translation_left2 kanji_left2 kanji_right2 translation_right2";
 }
 .similiar_looking_translation_left {
   grid-area: translation_left;
@@ -90,15 +88,6 @@ body {
   height: 2em;
 }
 
-.main_title {
-  font-size: 36px;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  text-align: center;
-}
-
 /* TABLET ADJUSTMENTS FOR SIMILIAR LOOKING */
 
 @media screen and (min-width: 450px) {
@@ -106,18 +95,14 @@ body {
     height: 100vh;
     background: linear-gradient(#f4dbd8, #e0b1cb);
     background-attachment: fixed;
-    color: #2a0800;
+    color: pink;
+ 
   }
 
   .similiar_looking_basic_row {
-    background: linear-gradient(
-      90deg,
-      rgb(245, 245, 245, 0),
-      rgb(245, 245, 245, 0.75) 15%,
-      rgb(245, 245, 245, 0.75) 75%,
-      rgb(245, 245, 245, 0)
-    );
-
+    background-color: rgb(245, 245, 245, 0.3);
+    */
+    border-radius: 1px;
     width: 90vw;
     margin: auto;
     /* border: 4px solid red; */
@@ -129,40 +114,5 @@ body {
       "translation_left hiragana_left hiragana_right translation_right"
       "translation_left kanji_left kanji_right translation_right";
   }
-}
-
-
-@media screen and (min-width: 1025px) {
-
-  body {
-    height: 100vh;
-    background: linear-gradient(#f4dbd8, #e0b1cb);
-    background-attachment: fixed;
-    color: #2a0800;
-  }
-
-  .similiar_looking_basic_row {
-    background: linear-gradient(
-      90deg,
-      rgb(245, 245, 245, 0),
-      rgb(245, 245, 245, 0.75) 15%,
-      rgb(245, 245, 245, 0.75) 75%,
-      rgb(245, 245, 245, 0)
-    );
-
-    width: 75vw;
-
-    /* border: 4px solid red; */
-    display: grid;
-    grid-template-rows: auto;
-    /* grid-template-columns: repeat(4, 1fr); */
-    grid-template-columns: 2fr 1fr 1fr 2fr 2fr;
-    grid-template-areas:
-      "translation_left hiragana_left hiragana_right translation_right image"
-      "translation_left kanji_left kanji_right translation_right image";
-  }
-
-
-
-
+  
 }
